Add placeholder content to all the sections

--- a/index.html
+++ b/index.html
@@ -10,33 +10,203 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-            </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">Shubham Bhardwaj</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
+
+    <!-- Header -->
+    <div class="jumbotron">
+        <div class="container">
+            <h1 class="display-3">Shubham <br> Bhardwaj</h1>
+            <hr>
+            <!-- <p class="lead">Web Developer and Graphic Designer</p> -->
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#" role="button">View Resume</a>
+            </p>
+        </div>
+    </div>
+
+    <!-- About -->
+
+    <div class="container">
+        <!-- Introduction -->
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-4 order-sm-1 cols">
+                <div class="media">
+                    <img src="Images/MyImage.jpg" alt="My Image" id="me">
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-8 order-sm-2 cols">
+                <p>I am <strong>Shubham Bhardwaj</strong>,<br>
+                    a Web Developer and Designer based in New Delhi, India. <br>
+                    I also do Graphic Designing.</p>
+            </div>
+        </div>
+
+        <!-- Education -->
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-4 order-md-second cols">
+                <div class="media">
+                    <img src="Images/MyImage.jpg" alt="My Image" id="me">
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-8 order-md-first cols">
+                <p>I am currently persuing my bachelors degree in<br>
+                    Electronics and Communication Enginnering from<br>
+                    <strong>Maharaja Surajmal Institute of Technology</strong>, New Delhi<br>
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Tools and Technologies -->
+    <section>
+        <div class="container">
+            <h1 class="display-4">Tools and Technologies</h1>
+            <div class="tools">
+                <div class="card" style="width: 12rem;">
+                    <img src="Images/html.png" class="card-img-top" alt="html">
+                    <div class="card-body">
+                        <h5 class="card-title">HTML</h5>
+                    </div>
+                </div>
+                <div class="card" style="width: 12rem;">
+                    <img src="Images/html.png" class="card-img-top" alt="html">
+                    <div class="card-body">
+                        <h5 class="card-title">HTML</h5>
+                    </div>
+                </div>
+                <div class="card" style="width: 12rem;">
+                    <img src="Images/html.png" class="card-img-top" alt="html">
+                    <div class="card-body">
+                        <h5 class="card-title">HTML</h5>
+                    </div>
+                </div>
+                <div class="card" style="width: 12rem;">
+                    <img src="Images/html.png" class="card-img-top" alt="html">
+                    <div class="card-body">
+                        <h5 class="card-title">HTML</h5>
+                    </div>
+                </div>
+                <div class="card" style="width: 12rem;">
+                    <img src="Images/html.png" class="card-img-top" alt="html">
+                    <div class="card-body">
+                        <h5 class="card-title">HTML</h5>
+                    </div>
+                </div>
+                <div class="card" style="width: 12rem;">
+                    <img src="Images/html.png" class="card-img-top" alt="html">
+                    <div class="card-body">
+                        <h5 class="card-title">HTML</h5>
+                    </div>
+                </div>
+                <div class="card" style="width: 12rem;">
+                    <img src="Images/html.png" class="card-img-top" alt="html">
+                    <div class="card-body">
+                        <h5 class="card-title">HTML</h5>
+                    </div>
+                </div>
+                <div class="card" style="width: 12rem;">
+                    <img src="Images/html.png" class="card-img-top" alt="html">
+                    <div class="card-body">
+                        <h5 class="card-title">HTML</h5>
+                    </div>
+                </div>
+                <div class="card" style="width: 12rem;">
+                    <img src="Images/html.png" class="card-img-top" alt="html">
+                    <div class="card-body">
+                        <h5 class="card-title">HTML</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects -->
+    <section>
+        <div class="container">
+            <h1 class="display-4">
+                Projects
+            </h1>
+            <div class="projects">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's
+                            content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's
+                            content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's
+                            content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact -->
+    <div class="jumbotron">
+        <div class="container">
+            <h1 class="display-4">
+                Lets get in touch
+            </h1>
+            <div class="links">
+                <img src="Images/linkedin.png" alt="linkedin" class="media-links">
+                <img src="Images/github.png" alt="github" class="media-links">
+                <img src="Images/behance-logo.png" alt="behance" class="media-links">
+                <img src="Images/email.png" alt="email" class="media-links">
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        Shubham Bhardwaj @ 2021
+    </footer>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -51,3 +221,6 @@
 </body>
 
 </html>
+
+<!-- <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
+        href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
