Fix layout and positioning

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Projects</a>
+                        <a class="nav-link" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -39,10 +39,9 @@
     </nav>
 
     <!-- Header -->
-    <div class="jumbotron">
+    <div class="jumbotron header">
         <div class="container">
-            <h1 class="display-3">Shubham <br> Bhardwaj</h1>
-            <hr>
+            <h1 class="display-3 heading">Shubham <br> Bhardwaj</h1>
             <!-- <p class="lead">Web Developer and Graphic Designer</p> -->
             <p class="lead">
                 <a class="btn btn-primary btn-lg" href="#" role="button">View Resume</a>
@@ -52,135 +51,140 @@
 
     <!-- About -->
 
-    <div class="container">
-        <!-- Introduction -->
-        <div class="row">
-            <div class="col-12 col-md-6 col-lg-4 order-sm-1 cols">
-                <div class="media">
-                    <img src="Images/MyImage.jpg" alt="My Image" id="me">
+    <div class="about" id="about">
+        <div class="container">
+            <!-- Introduction -->
+            <div class="row intro">
+                <div class="col-12 col-md-6 col-lg-4 order-sm-1 cols">
+                    <div class="media">
+                        <img src="Images/MyImage.jpg" alt="My Image" id="me">
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-8 order-sm-2 cols">
+                    <p class="intro-text">
+                        <span class="display-4 hello">Hello</span><br>
+                        I am <strong>Shubham Bhardwaj</strong>,<br>
+                        a Web Developer and Designer based in New Delhi, India. <br>
+                        I also do Graphic Designing.
+                    </p>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-8 order-sm-2 cols">
-                <p>I am <strong>Shubham Bhardwaj</strong>,<br>
-                    a Web Developer and Designer based in New Delhi, India. <br>
-                    I also do Graphic Designing.</p>
+
+            <!-- Education -->
+            <div class="row education">
+                <div class="col-12 col-md-6 col-lg-4 order-md-second cols">
+                    <div class="media">
+                        <img src="Images/MyImage.jpg" alt="My Image" id="me">
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-8 order-md-first cols">
+                    <p class="education-text">I am currently persuing my bachelors degree in<br>
+                        Electronics and Communication Enginnering from<br>
+                        <strong>Maharaja Surajmal Institute of Technology</strong>, New Delhi<br>
+                    </p>
+                </div>
             </div>
         </div>
 
-        <!-- Education -->
-        <div class="row">
-            <div class="col-12 col-md-6 col-lg-4 order-md-second cols">
-                <div class="media">
-                    <img src="Images/MyImage.jpg" alt="My Image" id="me">
+        <!-- Tools and Technologies -->
+        <section class="tech">
+            <div class="container">
+                <h1 class="display-4">Tools and Technologies</h1>
+                <div class="tools">
+                    <div class="card" style="width: 12rem;">
+                        <img src="Images/html.png" class="card-img-top" alt="html">
+                        <div class="card-body">
+                            <h5 class="card-title">HTML</h5>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 12rem;">
+                        <img src="Images/html.png" class="card-img-top" alt="html">
+                        <div class="card-body">
+                            <h5 class="card-title">HTML</h5>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 12rem;">
+                        <img src="Images/html.png" class="card-img-top" alt="html">
+                        <div class="card-body">
+                            <h5 class="card-title">HTML</h5>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 12rem;">
+                        <img src="Images/html.png" class="card-img-top" alt="html">
+                        <div class="card-body">
+                            <h5 class="card-title">HTML</h5>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 12rem;">
+                        <img src="Images/html.png" class="card-img-top" alt="html">
+                        <div class="card-body">
+                            <h5 class="card-title">HTML</h5>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 12rem;">
+                        <img src="Images/html.png" class="card-img-top" alt="html">
+                        <div class="card-body">
+                            <h5 class="card-title">HTML</h5>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 12rem;">
+                        <img src="Images/html.png" class="card-img-top" alt="html">
+                        <div class="card-body">
+                            <h5 class="card-title">HTML</h5>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 12rem;">
+                        <img src="Images/html.png" class="card-img-top" alt="html">
+                        <div class="card-body">
+                            <h5 class="card-title">HTML</h5>
+                        </div>
+                    </div>
+                    <div class="card" style="width: 12rem;">
+                        <img src="Images/html.png" class="card-img-top" alt="html">
+                        <div class="card-body">
+                            <h5 class="card-title">HTML</h5>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-8 order-md-first cols">
-                <p>I am currently persuing my bachelors degree in<br>
-                    Electronics and Communication Enginnering from<br>
-                    <strong>Maharaja Surajmal Institute of Technology</strong>, New Delhi<br>
-                </p>
-            </div>
-        </div>
+        </section>
     </div>
 
-    <!-- Tools and Technologies -->
-    <section>
-        <div class="container">
-            <h1 class="display-4">Tools and Technologies</h1>
-            <div class="tools">
-                <div class="card" style="width: 12rem;">
-                    <img src="Images/html.png" class="card-img-top" alt="html">
-                    <div class="card-body">
-                        <h5 class="card-title">HTML</h5>
-                    </div>
-                </div>
-                <div class="card" style="width: 12rem;">
-                    <img src="Images/html.png" class="card-img-top" alt="html">
-                    <div class="card-body">
-                        <h5 class="card-title">HTML</h5>
-                    </div>
-                </div>
-                <div class="card" style="width: 12rem;">
-                    <img src="Images/html.png" class="card-img-top" alt="html">
-                    <div class="card-body">
-                        <h5 class="card-title">HTML</h5>
-                    </div>
-                </div>
-                <div class="card" style="width: 12rem;">
-                    <img src="Images/html.png" class="card-img-top" alt="html">
-                    <div class="card-body">
-                        <h5 class="card-title">HTML</h5>
-                    </div>
-                </div>
-                <div class="card" style="width: 12rem;">
-                    <img src="Images/html.png" class="card-img-top" alt="html">
-                    <div class="card-body">
-                        <h5 class="card-title">HTML</h5>
-                    </div>
-                </div>
-                <div class="card" style="width: 12rem;">
-                    <img src="Images/html.png" class="card-img-top" alt="html">
-                    <div class="card-body">
-                        <h5 class="card-title">HTML</h5>
-                    </div>
-                </div>
-                <div class="card" style="width: 12rem;">
-                    <img src="Images/html.png" class="card-img-top" alt="html">
-                    <div class="card-body">
-                        <h5 class="card-title">HTML</h5>
-                    </div>
-                </div>
-                <div class="card" style="width: 12rem;">
-                    <img src="Images/html.png" class="card-img-top" alt="html">
-                    <div class="card-body">
-                        <h5 class="card-title">HTML</h5>
-                    </div>
-                </div>
-                <div class="card" style="width: 12rem;">
-                    <img src="Images/html.png" class="card-img-top" alt="html">
-                    <div class="card-body">
-                        <h5 class="card-title">HTML</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Projects -->
-    <section>
+    <section class="projects" id="projects">
         <div class="container">
             <h1 class="display-4">
                 Projects
             </h1>
-            <div class="projects">
+            <div class="project-cards">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="Images/MyImage.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's
                             content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">View</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="Images/MyImage.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's
                             content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">View</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="Images/MyImage.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's
                             content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">View</a>
                     </div>
                 </div>
             </div>
@@ -188,7 +192,7 @@
     </section>
 
     <!-- Contact -->
-    <div class="jumbotron">
+    <div class="jumbotron contact" id="contact">
         <div class="container">
             <h1 class="display-4">
                 Lets get in touch
