--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
     <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="navbar">
         <div class="container">
             <a class="navbar-brand" href="#">Shubham Bhardwaj</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -44,7 +45,9 @@
             <h1 class="display-3 heading">Shubham <br> Bhardwaj</h1>
             <!-- <p class="lead">Web Developer and Graphic Designer</p> -->
             <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">View Resume</a>
+                <a class="btn btn-outline-light btn-lg"
+                    href="https://drive.google.com/file/d/1bRSaLxqub-Gx4YbczVDnu1MB-KCb7HnD/view?usp=sharing"
+                    role="button">View Resume</a>
             </p>
         </div>
     </div>
@@ -62,7 +65,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-8 order-sm-2 cols">
                     <p class="intro-text">
-                        <span class="display-4 hello">Hello</span><br>
+                        <span class="display-4" id="hello">Hello</span><br>
                         I am <strong>Shubham Bhardwaj</strong>,<br>
                         a Web Developer and Designer based in New Delhi, India. <br>
                         I also do Graphic Designing.
@@ -74,7 +77,7 @@
             <div class="row education">
                 <div class="col-12 col-md-6 col-lg-4 order-md-second cols">
                     <div class="media">
-                        <img src="Images/MyImage.jpg" alt="My Image" id="me">
+                        <img src="Images/Books.jpg" alt="My Image" id="me">
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-8 order-md-first cols">
@@ -91,58 +94,84 @@
             <div class="container">
                 <h1 class="display-4">Tools and Technologies</h1>
                 <div class="tools">
-                    <div class="card" style="width: 12rem;">
-                        <img src="Images/html.png" class="card-img-top" alt="html">
-                        <div class="card-body">
-                            <h5 class="card-title">HTML</h5>
+                    <div class="box">
+                        <div class="box-img">
+                            <img src="Images/html.png" alt="HTML logo">
+                        </div>
+                        <div class="box-label">
+                            <h5 class="label">HTML</h5>
                         </div>
                     </div>
-                    <div class="card" style="width: 12rem;">
-                        <img src="Images/html.png" class="card-img-top" alt="html">
-                        <div class="card-body">
-                            <h5 class="card-title">HTML</h5>
+                    <div class="box">
+                        <div class="box-img">
+                            <img src="Images/css-3.png" alt="CSS logo">
+                        </div>
+                        <div class="box-label">
+                            <h5 class="label">CSS</h5>
                         </div>
                     </div>
-                    <div class="card" style="width: 12rem;">
-                        <img src="Images/html.png" class="card-img-top" alt="html">
-                        <div class="card-body">
-                            <h5 class="card-title">HTML</h5>
+                    <div class="box">
+                        <div class="box-img">
+                            <img src="Images/JavaScript.svg" alt="JS Logo" id="js">
+                        </div>
+                        <div class="box-label">
+                            <h5 class="label">JavaScript</h5>
                         </div>
                     </div>
-                    <div class="card" style="width: 12rem;">
-                        <img src="Images/html.png" class="card-img-top" alt="html">
-                        <div class="card-body">
-                            <h5 class="card-title">HTML</h5>
+                    <div class="box">
+                        <div class="box-img">
+                            <img src="Images/ReactJs.svg" alt="React Logo">
+                        </div>
+                        <div class="box-label">
+                            <h5 class="label">React JS</h5>
                         </div>
                     </div>
-                    <div class="card" style="width: 12rem;">
-                        <img src="Images/html.png" class="card-img-top" alt="html">
-                        <div class="card-body">
-                            <h5 class="card-title">HTML</h5>
+                    <div class="box">
+                        <div class="box-img">
+                            <img src="Images/NodeJs.svg" alt="Node Logo">
+                        </div>
+                        <div class="box-label">
+                            <h5 class="label">Node JS</h5>
                         </div>
                     </div>
-                    <div class="card" style="width: 12rem;">
-                        <img src="Images/html.png" class="card-img-top" alt="html">
-                        <div class="card-body">
-                            <h5 class="card-title">HTML</h5>
+                    <div class="box">
+                        <div class="box-img">
+                            <img src="Images/MongoDB.svg" alt="MongoDB Logo">
+                        </div>
+                        <div class="box-label">
+                            <h5 class="label">MongoDB</h5>
                         </div>
                     </div>
-                    <div class="card" style="width: 12rem;">
-                        <img src="Images/html.png" class="card-img-top" alt="html">
-                        <div class="card-body">
-                            <h5 class="card-title">HTML</h5>
+                    <div class="box">
+                        <div class="box-img">
+                            <img src="Images/Git.svg" alt="Git Logo" id="git">
+                        </div>
+                        <div class="box-label">
+                            <h5 class="label">Git & GitHub</h5>
                         </div>
                     </div>
-                    <div class="card" style="width: 12rem;">
-                        <img src="Images/html.png" class="card-img-top" alt="html">
-                        <div class="card-body">
-                            <h5 class="card-title">HTML</h5>
+                    <div class="box">
+                        <div class="box-img">
+                            <img src="Images/adobe-illustrator.png" alt="AI Logo">
+                        </div>
+                        <div class="box-label">
+                            <h5 class="label">Adobe Illustrator</h5>
                         </div>
                     </div>
-                    <div class="card" style="width: 12rem;">
-                        <img src="Images/html.png" class="card-img-top" alt="html">
-                        <div class="card-body">
-                            <h5 class="card-title">HTML</h5>
+                    <div class="box">
+                        <div class="box-img">
+                            <img src="Images/adobe-photoshop-logo.png" alt="PS Logo">
+                        </div>
+                        <div class="box-label">
+                            <h5 class="label">Adobe Photoshop</h5>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="box-img">
+                            <img src="Images/Figma.svg" alt="Figma Logo" id="figma">
+                        </div>
+                        <div class="box-label">
+                            <h5 class="label">Figma</h5>
                         </div>
                     </div>
                 </div>
@@ -153,38 +182,40 @@
     <!-- Projects -->
     <section class="projects" id="projects">
         <div class="container">
-            <h1 class="display-4">
+            <h1 class="display-4" id="project-heading">
                 Projects
             </h1>
             <div class="project-cards">
                 <div class="card" style="width: 18rem;">
-                    <img src="Images/MyImage.jpg" class="card-img-top" alt="...">
+                    <img src="Images/Color-Picker.jpg" class="card-img-top" alt="Color Picker Image">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's
-                            content.</p>
-                        <a href="#" class="btn btn-primary">View</a>
+                        <h5 class="card-title">Color Picker</h5>
+                        <p class="card-text">An application built using React for creating
+                            color palettes for websites and graphic
+                            desinging projects.</p>
+                        <a href="https://shubh4m-b.github.io/color-picker/" class="btn btn-primary">View</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
-                    <img src="Images/MyImage.jpg" class="card-img-top" alt="...">
+                    <img src="Images/Notify.jpg" class="card-img-top" alt="Notify Image">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's
-                            content.</p>
-                        <a href="#" class="btn btn-primary">View</a>
+                        <h5 class="card-title">Notify</h5>
+                        <p class="card-text">Notify is a note keeping and sharing web
+                            based application. Users can create dierent
+                            note groups which can either be for personal
+                            use or for a group of users.</p>
+                        <a href="https://vast-tor-28956.herokuapp.com/" class="btn btn-primary">View</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
-                    <img src="Images/MyImage.jpg" class="card-img-top" alt="...">
+                    <img src="Images/YelpCamp.jpg" class="card-img-top" alt="YelpCamp">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's
-                            content.</p>
-                        <a href="#" class="btn btn-primary">View</a>
+                        <h5 class="card-title">YelpCamp</h5>
+                        <p class="card-text">A camp site viewing website for finding and
+                            reviewing campgrounds, built using NodeJS,
+                            Express, EJS and MongoDB, supports full
+                            CRUD functionality.</p>
+                        <a href="https://glacial-citadel-19694.herokuapp.com/" class="btn btn-primary">View</a>
                     </div>
                 </div>
             </div>
@@ -195,20 +226,36 @@
     <div class="jumbotron contact" id="contact">
         <div class="container">
             <h1 class="display-4">
-                Lets get in touch
+                Reach Me
             </h1>
             <div class="links">
-                <img src="Images/linkedin.png" alt="linkedin" class="media-links">
-                <img src="Images/github.png" alt="github" class="media-links">
-                <img src="Images/behance-logo.png" alt="behance" class="media-links">
-                <img src="Images/email.png" alt="email" class="media-links">
+                <div class="media-circle" id="linkedin">
+                    <a href="http://www.linkedin.com/in/shubham-bhardwaj-2000">
+                        <img src="Images/linkedin.png" alt="linkedin" class="media-links">
+                    </a>
+                </div>
+                <div class="media-circle" id="github">
+                    <a href="https://github.com/Shubh4m-B">
+                        <img src="Images/github.png" alt="github" class="media-links">
+                    </a>
+                </div>
+                <div class="media-circle" id="behance">
+                    <a href="https://www.behance.net/shubhambhardwaj1">
+                        <img src="Images/behance-logo.png" alt="behance" class="media-links">
+                    </a>
+                </div>
+                <div class="media-circle" id="mail">
+                    <a href="mailto:shubham200015@yahoo.com">
+                        <img src="Images/email.png" alt="email" class="media-links">
+                    </a>
+                </div>
             </div>
         </div>
     </div>
 
     <!-- Footer -->
     <footer>
-        Shubham Bhardwaj @ 2021
+        Shubham Bhardwaj &#169; 2021
     </footer>
 
     <!-- Optional JavaScript -->
